--- a/src/css/docsearch.css
+++ b/src/css/docsearch.css
@@ -1,41 +1,13 @@
 .DocSearch--active {
-  overflow: hidden !important;
+  @apply overflow-hidden !important;
 }
 
 .DocSearch-Container {
-  height: 100vh;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100vw;
-  z-index: 200;
-  display: flex;
-  flex-direction: column;
-  background: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(theme('backdropBlur.sm'));
-  padding: 1rem;
-}
-
-@screen sm {
-  .DocSearch-Container {
-    padding: 1.5rem;
-  }
-}
-
-@screen md {
-  .DocSearch-Container {
-    padding: 10vh;
-  }
-}
-
-@screen lg {
-  .DocSearch-Container {
-    padding: 12vh;
-  }
+  @apply w-screen h-screen fixed z-[200] top-0 left-0 flex flex-col bg-black/20 backdrop-blur-sm p-4 sm:p-6 md:p-[10vh] lg:p-[12vh] dark:bg-gray-900/80;
 }
 
 .DocSearch-LoadingIndicator svg {
-  display: none;
+  @apply hidden;
 }
 
 .DocSearch-LoadingIndicator {
@@ -47,7 +19,7 @@
 }
 
 .DocSearch-Container--Stalled .DocSearch-LoadingIndicator {
-  display: block;
+  @apply block;
 }
 
 .DocSearch-Modal {
@@ -60,42 +32,37 @@
   border-radius: theme('borderRadius.lg');
   box-shadow: theme('boxShadow.lg');
   background: white;
+
+  .dark & {
+    background: theme('colors.gray.800');
+    box-shadow: inset 0 1px 0 0 rgb(255 255 255 / 0.05);
+  }
 }
 
 .DocSearch-SearchBar {
-  flex: none;
-  border-bottom: 1px solid theme('colors.gray.100');
-  position: relative;
   z-index: 1;
-  display: flex;
-  align-items: center;
   padding: 0 1rem;
+  @apply flex-none relative flex items-center border-b border-gray-100 dark:border-gray-200/5;
 }
 
 .DocSearch-Form {
-  flex: auto;
-  display: flex;
-  align-items: center;
-  min-width: 0;
+  @apply flex-auto flex items-center min-w-0;
 }
 
 .DocSearch-Dropdown-Container {
-  padding-bottom: 1.5rem;
+  @apply pb-6;
 }
 
 .DocSearch-Dropdown {
-  flex: auto;
-  overflow: auto;
+  @apply flex-auto overflow-auto;
 }
 
 .DocSearch-Hit--Result {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  position: relative;
+  @apply mx-6 relative;
 }
 
 .DocSearch-Hit--Result.DocSearch-Hit--Child {
-  margin-left: 3rem;
+  @apply ml-12;
 }
 
 .DocSearch-Hit--Result.DocSearch-Hit--Child::before {
@@ -106,23 +73,29 @@
   left: -1rem;
   width: 1px;
   background: theme('colors.gray.200');
+
+  @apply dark:bg-gray-700;
 }
 
 .DocSearch-Hit > a {
   position: relative;
   font-size: 0.875rem;
   border-bottom: 1px solid theme('colors.gray.100');
+
+  @apply dark:border-gray-200/5;
 }
 
 .DocSearch-Hit--Result {
-  border-bottom: 0 !important;
+  @apply border-b-0 !important;
 }
 
 .DocSearch-MagnifierLabel {
-  flex: none;
-  width: 1.5rem;
-  height: 1.5rem;
+  @apply flex-none w-6 h-6;
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m19 19-3.5-3.5' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='11' cy='11' r='6' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+
+  .dark & {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m19 19-3.5-3.5' stroke='%2394a3b8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='11' cy='11' r='6' stroke='%2394a3b8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  }
 }
 
 .DocSearch-MagnifierLabel svg {
@@ -143,6 +116,8 @@
   margin-right: 1rem;
   flex: auto;
   min-width: 0;
+
+  @apply dark:text-gray-200;
 }
 
 @screen sm {
@@ -172,7 +147,7 @@
   font-size: 0;
   border-radius: 0.375rem;
   padding: 0.25rem 0.375rem;
-  @apply ring-1 ring-gray-900/5 shadow-sm hover:ring-gray-900/10 hover:shadow;
+  @apply ring-1 ring-gray-900/5 shadow-sm hover:ring-gray-900/10 hover:shadow dark:ring-0 dark:bg-gray-600;
   width: 1.75rem;
   height: 1.5rem;
   /* esc */
@@ -180,6 +155,10 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 57.1428571429% auto;
+
+  .dark & {
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.506 6h3.931V4.986H1.736v-1.39h2.488V2.583H1.736V1.196h2.69V.182H.506V6ZM8.56 1.855h1.18C9.721.818 8.87.102 7.574.102c-1.276 0-2.21.705-2.205 1.762-.003.858.602 1.35 1.585 1.585l.634.159c.633.153.986.335.988.727-.002.426-.406.716-1.03.716-.64 0-1.1-.295-1.14-.878h-1.19c.03 1.259.931 1.91 2.343 1.91 1.42 0 2.256-.68 2.259-1.745-.003-.969-.733-1.483-1.744-1.71l-.523-.125c-.506-.117-.93-.304-.92-.722 0-.375.332-.65.934-.65.588 0 .949.267.994.724ZM15.78 2.219C15.618.875 14.6.102 13.254.102c-1.537 0-2.71 1.086-2.71 2.989 0 1.898 1.153 2.989 2.71 2.989 1.492 0 2.392-.992 2.526-2.063l-1.244-.006c-.117.623-.606.98-1.262.98-.883 0-1.483-.656-1.483-1.9 0-1.21.591-1.9 1.492-1.9.673 0 1.159.389 1.253 1.028h1.244Z' fill='%2394a3b8'/%3E%3C/svg%3E");
+  }
 }
 
 .DocSearch-Reset svg {
@@ -192,6 +171,10 @@
   color: theme('colors.gray.900');
   padding-top: 2.5rem;
   margin: 0 1.5rem 1rem;
+
+  .dark & {
+    color: theme('colors.gray.200');
+  }
 }
 
 .DocSearch-Hits:first-child .DocSearch-Hit-source {
@@ -218,12 +201,12 @@
   width: 1.5rem;
   height: 1.5rem;
   border-radius: theme('borderRadius.md');
-  background-color: white;
-  @apply ring-1 ring-gray-900/5 shadow-sm;
   /* hash icon */
   background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.75 1v10M8.25 1v10M1 3.75h10M1 8.25h10' stroke='%2394A3B8' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: center center;
+
+  @apply bg-white ring-1 ring-gray-900/5 shadow-sm dark:bg-gray-700 dark:ring-0;
 }
 
 .DocSearch-Hit--Parent .DocSearch-Hit-icon {
@@ -252,12 +235,11 @@
   background: theme('colors.gray.100');
   border-radius: 999px;
   padding: 0 0.375rem;
+  @apply dark:bg-gray-700/50 dark:text-gray-400;
 }
 
 .DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-icon {
-  background-color: transparent;
-  box-shadow: none;
-  @apply ring-1 ring-white/30;
+  @apply bg-transparent shadow-none ring-1 ring-white/30 dark:ring-white/20;
   background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.75 1v10M8.25 1v10M1 3.75h10M1 8.25h10' stroke='%23fff' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
 }
 
@@ -267,30 +249,24 @@
 }
 
 .DocSearch-Hit-title {
-  color: theme('colors.gray.700');
-  line-height: 1.5rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  @apply text-gray-700 leading-6 truncate dark:text-gray-400;
 }
 
 .DocSearch-Hit-title + .DocSearch-Hit-path {
-  margin-bottom: 0.25rem;
+  @apply mb-1;
 }
 
 .DocSearch-Hit-action {
-  flex: none;
-  margin-left: 0.875rem;
+  @apply flex-none ml-3.5;
 }
 
 .DocSearch-Hit--Result {
   .DocSearch-Hit-action svg {
-    display: none;
+    @apply hidden;
   }
 
   .DocSearch-Hit-action {
-    width: 1.5rem;
-    height: 1.5rem;
+    @apply w-6 h-6;
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   }
 
@@ -299,21 +275,20 @@
   }
 
   .DocSearch-Hit[aria-selected='true'] & .DocSearch-Hit-path {
-    color: white;
-    background-color: theme('colors.sky.400');
+    @apply bg-sky-400 text-white dark:bg-sky-400/50;
   }
 
   .DocSearch-Hit[aria-selected='true'] & .DocSearch-Hit-title {
-    color: white;
+    @apply text-white;
   }
 }
 
 .DocSearch-Hit-action-button {
-  display: flex;
+  @apply flex;
 }
 
 .DocSearch-Hit-action + .DocSearch-Hit-action {
-  margin-left: 0.5rem;
+  @apply ml-2;
 }
 
 .DocSearch-Hit-action path {
@@ -326,60 +301,56 @@
 }
 
 .DocSearch-Hit > a {
-  display: block;
-  padding: 1rem 1.5rem;
+  @apply block py-4 px-6;
 }
 
 .DocSearch-Hit--Result {
-  padding: 0.75rem 1rem !important;
+  @apply py-3 px-4 !important;
 }
 
 .DocSearch-Hit {
-  position: relative;
+  @apply relative;
 }
 
 .DocSearch-Hit:first-child > a {
-  border-top: 1px solid theme('colors.gray.100');
+  @apply border-t border-gray-100 dark:border-gray-200/5;
 }
 
 .DocSearch-Hit--Result {
-  border-top: 0 !important;
+  @apply border-t-0 !important;
 }
 
 .DocSearch-Hit + .DocSearch-Hit .DocSearch-Hit--Result {
-  margin-top: 0.5rem;
+  @apply mt-2;
 }
 
 .DocSearch-Hit--Result {
-  background: theme('colors.gray.50');
-  border-radius: theme('borderRadius.lg');
+  @apply bg-gray-50 rounded-lg dark:bg-gray-700/30;
 }
 
 .DocSearch-Hit[aria-selected='true'] > a {
-  background-color: theme('colors.gray.50');
+  @apply bg-gray-50 dark:bg-gray-700/[0.16];
 }
 
 .DocSearch-Hit[aria-selected='true'] .DocSearch-Hit--Result {
-  background: theme('colors.sky.500');
+  @apply bg-sky-500 dark:bg-sky-600;
 }
 
 .DocSearch-Hit--FirstChild::before {
-  top: 0 !important;
+  @apply top-0 !important;
 }
 
 .DocSearch-Hit--LastChild::before {
-  bottom: 0 !important;
+  @apply bottom-0 !important;
 }
 
 .DocSearch-Hits mark {
   background: none;
-  color: theme('colors.sky.600');
-  font-weight: 600;
-  border-bottom: 2px solid theme('colors.sky.300');
+  @apply text-sky-600 font-semibold border-b-2 border-sky-300 dark:text-white dark:border-0;
 }
 
 .DocSearch-Hit-path mark {
-  border: 0;
+  @apply border-0;
 }
 
 .DocSearch-Hit[aria-selected='true'] mark {
@@ -388,28 +359,19 @@
 }
 
 .DocSearch-Footer {
-  flex: none;
-  display: flex;
-  justify-content: flex-end;
-  border-top: 1px solid theme('colors.gray.100');
-  padding: 1rem 1.5rem;
+  @apply flex-none flex justify-end border-t border-gray-100 py-4 px-6 dark:border-gray-200/5;
 }
 
 .DocSearch-Commands {
-  display: none;
+  @apply hidden;
 }
 
 .DocSearch-Logo a {
-  display: flex;
-  align-items: center;
-  color: theme('colors.gray.400');
-  font-size: 0.75rem;
-  font-weight: 500;
+  @apply flex items-center text-gray-400 text-xs font-medium dark:text-gray-600;
 }
 
 .DocSearch-Logo svg {
-  color: #5468ff;
-  margin-left: 0.75rem;
+  @apply ml-3 text-[#5468ff] dark:text-gray-400;
 }
 
 .DocSearch-Hit--deleting,
@@ -419,28 +381,23 @@
 }
 
 .DocSearch-NoResults .DocSearch-Screen-Icon {
-  display: none;
+  @apply hidden;
 }
 
 .DocSearch-Title {
-  font-size: theme('fontSize.lg');
-  line-height: theme('lineHeight.6');
-  margin-bottom: 2.5rem;
+  @apply text-lg leading-6 mb-10;
 }
 
 .DocSearch-Title strong {
-  color: theme('colors.gray.900');
-  font-weight: 400;
+  @apply text-gray-900 font-normal dark:text-gray-200;
 }
 
 .DocSearch-StartScreen .DocSearch-Help {
-  text-align: center;
-  color: theme('colors.gray.400');
-  padding: 4rem 1.5rem;
+  @apply text-center text-gray-400 py-16 px-6;
 }
 
 .DocSearch-NoResults {
-  padding: 2.5rem 1rem 2rem;
+  @apply pt-10 pb-8 px-4;
 }
 
 .DocSearch-NoResults .DocSearch-Title {
@@ -449,51 +406,37 @@
 }
 
 .DocSearch-NoResults-Prefill-List .DocSearch-Help {
-  font-size: theme('fontSize.sm');
-  line-height: theme('lineHeight.6');
-  font-weight: 600;
-  color: theme('colors.gray.900');
-  margin-bottom: 0.75rem;
+  @apply text-sm leading-6 font-semibold mb-3 text-gray-900 dark:text-gray-200;
+}
+
+.DocSearch-NoResults-Prefill-List ul {
+  @apply rounded-lg bg-gray-50 border border-gray-200 dark:bg-gray-700/30 dark:border-gray-700 overflow-hidden;
 }
 
 .DocSearch-NoResults-Prefill-List button {
   padding: 0.5rem 0.75rem;
-  background: theme('colors.gray.50');
   display: block;
   width: 100%;
   text-align: left;
-  border: 1px solid theme('colors.gray.200');
-  color: theme('colors.gray.700');
   font-size: theme('fontSize.sm');
   line-height: theme('lineHeight.6');
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
-}
 
-.DocSearch-NoResults-Prefill-List li:first-child button {
-  border-top-left-radius: theme('borderRadius.lg');
-  border-top-right-radius: theme('borderRadius.lg');
-}
-
-.DocSearch-NoResults-Prefill-List li:last-child button {
-  border-bottom-left-radius: theme('borderRadius.lg');
-  border-bottom-right-radius: theme('borderRadius.lg');
+  @apply text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 dark:hover:bg-white/[0.02];
 }
 
 .DocSearch-NoResults-Prefill-List li + li button {
-  border-top-width: 0;
+  @apply border-t border-gray-200 dark:border-gray-200/5;
 }
 
 .DocSearch-NoResults-Prefill-List + .DocSearch-Help {
-  font-size: theme('fontSize.xs');
-  line-height: theme('lineHeight.6');
-  margin-top: 0.75rem;
+  @apply text-xs leading-6 mt-3;
 }
 
 .DocSearch-NoResults-Prefill-List + .DocSearch-Help a {
-  color: theme('colors.sky.500');
-  font-weight: 600;
+  @apply text-sky-500 font-semibold dark:text-sky-400;
 }
 
 .DocSearch-Hit-action [data-cy] {
@@ -507,6 +450,10 @@
 
 .DocSearch-Hit-action [data-cy='fav-recent'] {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' stroke='%23CBD5E1' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+
+  .dark & {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' stroke='%2364748b' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  }
 }
 
 .DocSearch-Hit-action [data-cy='fav-recent']:hover {
@@ -515,25 +462,26 @@
 
 .DocSearch-Hit-action [data-cy='remove-recent'] {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2394A3B8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+
+  .dark & {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2364748b' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  }
 }
 
 .DocSearch-Hit-action [data-cy='remove-recent']:hover {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+
+  .dark & {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2394a3b8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  }
 }
 
 .DocSearch-Hit-action [data-cy='remove-fav']::before {
-  content: '';
-  position: absolute;
-  pointer-events: none;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: theme('colors.sky.50');
+  @apply absolute inset-0 content-[''] pointer-events-none bg-sky-50 dark:bg-gray-700/30;
 }
 
 .DocSearch-Hit[aria-selected='true'] [data-cy='remove-fav']::before {
-  background: theme('colors.sky.100');
+  @apply bg-sky-100 dark:bg-gray-700/40;
 }
 
 .DocSearch-Hit-action [data-cy='remove-fav']::after {
@@ -548,16 +496,26 @@
     url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2394A3B8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   background-repeat: no-repeat, repeat-y, no-repeat;
   background-position: left, center, right;
+
+  .dark & {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' fill='%230EA5E9' stroke='%230EA5E9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"),
+      url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23e2e8f0' opacity='0.05' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1' height='1'/%3E%3C/svg%3E"),
+      url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2364748b' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  }
 }
 
 .DocSearch-Hit-action [data-cy='remove-fav']:hover::after {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' fill='%230EA5E9' stroke='%230EA5E9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"),
     url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23e2e8f0' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1' height='1'/%3E%3C/svg%3E"),
     url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+
+  .dark & {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' fill='%230EA5E9' stroke='%230EA5E9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"),
+      url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23e2e8f0' opacity='0.05' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1' height='1'/%3E%3C/svg%3E"),
+      url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2394a3b8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  }
 }
 
 .DocSearch-Hit-action + .DocSearch-Hit-action {
-  margin-left: 0.75rem;
-  padding-left: 0.75rem;
-  border-left: 1px solid theme('colors.gray.200');
+  @apply ml-3 pl-3 border-l border-gray-200 dark:border-gray-200/5;
 }
