Extend current preflight `html` styles to support other root/host scopes
Supports SVG root scope, ShadowDOM, and presumably other root scopes

--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -26,7 +26,7 @@
 6. Use the user's configured `sans` font-variation-settings by default.
 */
 
-html {
+:root, :host {
   line-height: 1.5; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   -moz-tab-size: 4; /* 3 */
